--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/PropertyGrid/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/PropertyGrid/Themes/Generic.xaml
@@ -1,13 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Microsoft.Windows.Controls.PropertyGrid"
-                    xmlns:converters="clr-namespace:Microsoft.Windows.Controls.Core.Converters">
+                    xmlns:converters="clr-namespace:Microsoft.Windows.Controls.Core.Converters"
+                    xmlns:pgConverters="clr-namespace:Microsoft.Windows.Controls.PropertyGrid.Converters"
+                    xmlns:utilities="clr-namespace:Microsoft.Windows.Controls.Core.Utilities"
+                    xmlns:commands="clr-namespace:Microsoft.Windows.Controls.PropertyGrid.Commands">
 
     <!-- =============================================================================== -->
     <!-- PropertyGrid                                                                    -->
     <!-- =============================================================================== -->
 
     <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
+    <pgConverters:ValueSourceToImagePathConverter x:Key="ValueSourceToImagePathConverter" />
+    <pgConverters:ValueSourceToToolTipConverter x:Key="ValueSourceToToolTipConverter" />
 
     <SolidColorBrush x:Key="MouseOverBorderBrush" Color="#FFFFB700" />
     <LinearGradientBrush x:Key="MouseOverBackgroundBrush" StartPoint="0,0" EndPoint="0,1" >
@@ -213,12 +218,17 @@
     <Style TargetType="{x:Type local:PropertyItem}">
         <Setter Property="BorderBrush" Value="#FFF0F0F0" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Focusable" Value="True"/>
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:PropertyItem}">
-                    <Border>
+                    <ControlTemplate.Resources>
+                        <ContextMenu x:Key="ContextMenu">
+                            <MenuItem Header="Reset Value" Command="commands:PropertyItemCommands.ResetValue" />
+                        </ContextMenu>
+                    </ControlTemplate.Resources>
+                    <Border Background="White" ContextMenu="{StaticResource ContextMenu}" ContextMenuService.Placement="Bottom">
                         <Grid VerticalAlignment="Center" HorizontalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="{Binding NameColumnWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:PropertyGrid}}}"/>
@@ -231,16 +241,17 @@
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBlock Text="{Binding Name, RelativeSource={RelativeSource TemplatedParent}}"  HorizontalAlignment="Stretch" TextTrimming="CharacterEllipsis"/>
 
-                                    <Border x:Name="Options" Grid.Column="1" HorizontalAlignment="Right" Margin="5,0,5,0" Height="8" Width="8"
-                                            Background="Black" Visibility="Collapsed" ToolTip="{Binding ValueSource, RelativeSource={RelativeSource TemplatedParent}}">
-                                        <Border.ContextMenu>
-                                            <ContextMenu>
-                                                <MenuItem Header="Reset Value" />
-                                            </ContextMenu>
-                                        </Border.ContextMenu>
-                                    </Border>
+                                    <TextBlock Text="{Binding Name, RelativeSource={RelativeSource TemplatedParent}}" HorizontalAlignment="Stretch" TextTrimming="CharacterEllipsis"/>
+
+                                    <Grid Grid.Column="1" HorizontalAlignment="Right" Margin="5,0,5,0" 
+                                          utilities:ContextMenuUtilities.OpenOnMouseLeftButtonClick="True"
+                                          ContextMenu="{StaticResource ContextMenu}" >
+
+                                        <Image x:Name="_optionsImage" Width="11" Height="11"
+                                               Source="{Binding ValueSource, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ValueSourceToImagePathConverter}}"
+                                               ToolTip="{Binding ValueSource, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource ValueSourceToToolTipConverter}}" />
+                                    </Grid>
                                 </Grid>
                             </Border>
 
@@ -250,10 +261,18 @@
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <!--<DataTrigger Binding="{Binding IsDataBound, RelativeSource={RelativeSource Self}}" Value="True">
-                            <Setter TargetName="Options" Property="Background" Value="Red"/>
-                            <Setter TargetName="Options" Property="ToolTip" Value="Databinding"/>
-                        </DataTrigger>-->
+                        <DataTrigger Binding="{Binding IsDataBound, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter TargetName="_optionsImage" Property="Source" Value="/WPFToolkit.Extended;component/PropertyGrid/Images/Database11.png" />
+                            <Setter TargetName="_optionsImage" Property="ToolTip" Value="Databinding" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding IsDynamicResource, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter TargetName="_optionsImage" Property="Source" Value="/WPFToolkit.Extended;component/PropertyGrid/Images/Resource11.png" />
+                            <Setter TargetName="_optionsImage" Property="ToolTip" Value="Resource" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding HasResourceApplied, RelativeSource={RelativeSource Self}}" Value="True">
+                            <Setter TargetName="_optionsImage" Property="Source" Value="/WPFToolkit.Extended;component/PropertyGrid/Images/Resource11.png" />
+                            <Setter TargetName="_optionsImage" Property="ToolTip" Value="Resource" />
+                        </DataTrigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="PART_Name" Property="Background" Value="#CED4DF" />
                         </Trigger>
